Updating in Sample Int a = 10

--- a/force-app/main/default/classes/Sample.cls
+++ b/force-app/main/default/classes/Sample.cls
@@ -3,7 +3,8 @@ public class Sample{
     {
         Messaging.reserveSingleEmailCapacity(1);
         Messaging.SingleEmailMessage mymail = new Messaging.SingleEmailMessage();
-        
+        Integer a = 10;
+            
         
     }
 }
