--- a/force-app/main/default/classes/healthCheck2.cls
+++ b/force-app/main/default/classes/healthCheck2.cls
@@ -5,7 +5,7 @@ global void execute(SchedulableContext sc) {
     Messaging.reserveSingleEmailCapacity(1);
     Messaging.SingleEmailMessage mymail = new Messaging.SingleEmailMessage();
     
-    String[] toaddresses = new String[]{'cvrnishanth@gmail.com','nithyanarayanancvr@gmail.com','nithyanarayanan.cvr@tcs.com'};
+    String[] toaddresses = new String[]{'cvrnishanth@gmail.com','nithyanarayanancvr@gmail.com'};
         
     OrgWideEmailAddress owea = new OrgWideEmailAddress();
     owea = [ SELECT id,Address, DisplayName FROM OrgWideEmailAddress];
@@ -17,15 +17,13 @@ global void execute(SchedulableContext sc) {
     // TableX ='<style>h1 {text-align: center;}p {text-align: center;}div {text-align: center;}</style>';
     String TableX ='<h1 style="color:blue; text-align: center;">Blaze Health Check - Automated</h1>';
     //Outter Table 
-    //TableX +='<style>.center-table { margin-left: auto;  margin-right: auto;    } </style>';
-    //<table class="center-table">
-    TableX +='<div align="center"><table border="2"  style="border-collapse: collapse; " cellspacing="10" cellpadding="3"  ><tr>';
+    TableX +='<table border="1" style="border-collapse: collapse;text-align: center; "><tr>';
     
     
     //UserLicense-----------------------------------------------------------
     List<userLicense> UserLicenseList = [Select Name, TotalLicenses, UsedLicenses From UserLicense];
     //System.debug(myList);
-    TableX += '<br><h1 style="border-collapse: collapse; text-align: center;">User License</h1>';
+    TableX += '<br><h1 style="border-collapse: collapse; align: center;">User License</h1>';
     //String TableX='';
     //if(UserLicenseList.size()>0)
     //{
@@ -35,15 +33,7 @@ global void execute(SchedulableContext sc) {
     for(userLicense s:UserLicenseList)
     {
         BalanceLicenses = integer.valueof(s.get('TotalLicenses'))-integer.valueof(s.get('UsedLicenses'));
-        if (BalanceLicenses <1)
-        {
-             TableX += '<tr style="background-color: red;">';
-        }
-        else if ((integer.valueof(s.get('TotalLicenses')))/10 > BalanceLicenses )
-         	TableX += '<tr style="background-color: yellow;">';
-        else
-            TableX +='<tr>';
-        TableX += '<td>'+s.get('Name')+'</td><th>'+s.get('TotalLicenses')+'</th><th>'+s.get('UsedLicenses')+'</th><th>'+BalanceLicenses+'</th></tr>';
+        TableX += '<tr><td>'+s.get('Name')+'</td><th>'+s.get('TotalLicenses')+'</th><th>'+s.get('UsedLicenses')+'</th><th>'+BalanceLicenses+'</th></tr>';
         //TableHead += TableX;
     }
     TableX += '</table>';//Closing User Licenses Table===========================
@@ -52,7 +42,7 @@ global void execute(SchedulableContext sc) {
     
     
     //Feature License    --------------------------------------------------------
-    TableX += '<div align="center"><br><br><h1 style="border-collapse: collapse; text-align: center;">Feature License</h1>';   
+    TableX += '<br><br><h1 style="border-collapse: collapse; text-align: center;">Feature License</h1>';   
     //Opening Feature Licenses Table
     TableX +='<table border="1" style="border-collapse: collapse; align: center;"><tr><th> Name </th>  <th> UsedLicense </th></tr>';
     
@@ -69,11 +59,11 @@ global void execute(SchedulableContext sc) {
             TableX += '<tr><td>'+FeatureLicenseName[i]+'</td>  <th>'+XX[0].get('expr0')+'</th></tr>';
             //T TableX;               
         }
-        TableX += '</table></div>';//Closing Feature Licenses Table
+        TableX += '</table>';//Closing Feature Licenses Table
 	}          
     TableX +='</tr>';
     
-    TableX += '</table></div>';//Outter Table Closing
+    TableX += '</table>';//Outter Table Closing
     
     String Signature ='<br>';
     Signature += '<p style="color:blue;">Thanks & Regards<br>Nithya Narayanan<br>Tata Consultancy Services - From Apex ORG - empathetic-impala-tsuncd-dev-ed.</p>';
@@ -81,8 +71,7 @@ global void execute(SchedulableContext sc) {
     TableX += Signature;
     TableX +='<img src="https://media.licdn.com/dms/image/v2/D4D0BAQGsGR9p4ikS5w/company-logo_200_200/company-logo_200_200/0/1708946550425/tata_consultancy_services_logo?e=1733961600&v=beta&t=G0uMDAeWF5JRPJ1iPYC2LDv8s4ERLs70rBl22f_sZu8" alt="TCSLogo" style="width:42px;height:42px;">';
     TableX +='<img src="https://media.licdn.com/dms/image/v2/C4D0BAQGN30g7aSl4NA/company-logo_200_200/company-logo_200_200/0/1631303787196?e=1733961600&v=beta&t=ziEEQywbr1yHnNuF_22D6C4mZ82hmecOOF1mThG-JYo" alt="ShellLogo" style="width:42px;height:42px;">';
-	
-    TableX +='<iframe src="https://status.salesforce.com/instances/AP22" height="2000" width="3000" title="Iframe Example"></iframe>';
+
     //Messaging Start
     mymail.setHtmlBody(TableX);
     mymail.setOrgWideEmailAddressId(owea.Id);
