--- a/force-app/main/default/classes/Test.cls
+++ b/force-app/main/default/classes/Test.cls
@@ -1,19 +1,5 @@
-public class Test {
-    public static void TestTable()
-    {
-    List<userLicense> myList = [Select Name, TotalLicenses, UsedLicenses From UserLicense];
-   
-        System.debug(myList);
-   
-        
-        String TableX='';
-        if(myList.size()>0)
-        {
-            for(userLicense s:mylist)
-            {
-                TableX='';
-            }
-        }
-    }
+public with sharing class test {
+    public test() {
 
+    }
 }
